Linked home page to brownie recipe page
Allows users to access the recipe page by clicking the link on the home page.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <ul>
+            <a href="/recipes/chocolate-peanut-butter-protein-bars.html">
+                Chocolate Peanut Butter Protein Bars
+            </a>
+        </ul>
     </body>
 </html>
