Added missing list item element to list
The unordered list wouldn't work properly without including the list item element.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>Odin Recipes</h1>
 
         <ul>
-            <a href="/recipes/chocolate-peanut-butter-protein-bars.html">
+            <li><a href="/recipes/chocolate-peanut-butter-protein-bars.html">
                 Chocolate Peanut Butter Protein Bars
-            </a>
+            </a></li>
         </ul>
     </body>
 </html>
