Added missing period to the reference to the brownie recipe file
The period was necessary to get the link to function properly, indicating we were starting in the current directory.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Odin Recipes</h1>
 
         <ul>
-            <li><a href="/recipes/chocolate-peanut-butter-protein-bars.html">
+            <li><a href="./recipes/chocolate-peanut-butter-protein-bars.html">
                 Chocolate Peanut Butter Protein Bars
             </a></li>
         </ul>
