--- a/recipes/onion-wrapped-flying-dutchman.html
+++ b/recipes/onion-wrapped-flying-dutchman.html
@@ -8,5 +8,51 @@
 
     <body>
         <h1>Onion Wrapped Flying Dutchman</h1>
+        
+        <img src="../components/thumbnails/onion-wrapped-flying-dutchman.png" 
+        alt="Image of an onion wrapped flying dutchman" height="512" width="683">
+
+        <h2>Description</h2>
+        <p>This copycat onion wrapped flying Dutchman is essentially a 
+            cheeseburger served in an onion "bun" that is tender, crisp, 
+            and sweet, and pairs perfectly well with the richness of the meat.
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 large white onion</li>
+            <li>3/4 pound ground beef round</li>
+            <li>1 teaspoon kosher salt</li>
+            <li>1/2 teaspoon freshly ground black pepper</li>
+            <li>4 slices American cheese, cut into thirds</li>
+            <li>1/4 cup mayonnaise</li>
+            <li>1 tablespoon ketchup</li>
+            <li>1 teaspoon mustard</li>
+            <li>1 tablespoon sweet pickle relish</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Cut 4 1/4-inch thick slices from the center portion of the onion 
+                and discard the smaller ends for another use. Divide beef into 4 
+                portions and form each portion  into a very thin patty. Season patties 
+                with salt and pepper.
+            </li>
+            <li>Heat a large skillet over medium-heat. Working in batches, add 2 
+                onion slices to the pan and cook, undisturbed, about 2 minutes. 
+                Add 2 patties and continue to cook until golden brown, 2 to 3 minutes. 
+                Flip onion and burger patties and continue to cook until golden brown 
+                pressing the burger as it cooks.
+            </li>
+            <li>Add 2 cheese slices to the top of one onion slice and both burger patties. 
+                place one burger on the cheese-topped onion slice and top with the second burger 
+                patty. Place remaining onion slice over burger and press down. Flip burger and 
+                cook 1 to 2 more minutes. Remove from pan and set aside. Repeat with remaining 
+                onions,  burger patties, and cheese.
+            </li>
+            <li>Combine mayo, ketchup, mustard, and pickle relish in a small bowl and stir 
+                well. Serve with burgers.
+            </li>
+        </ol>
     </body>
 </html>
