Add a functional link to Flying Dutchman recipe, and fixed a typo in the description
There was no way to previously access the Flying Dutchman recipe, and the description was previously not consistent with everything else,

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <li><a href="./recipes/chocolate-peanut-butter-protein-bars.html">
                 Chocolate Peanut Butter Protein Bars
             </a></li>
+            <li><a href="./recipes/onion-wrapped-flying-dutchman">
+                Onion Wrapped Flying Dutchman
+            </a></li>
         </ul>
     </body>
 </html>
