--- a/recipes/onion-wrapped-flying-dutchman.html
+++ b/recipes/onion-wrapped-flying-dutchman.html
@@ -13,7 +13,7 @@
         alt="Image of an onion wrapped flying dutchman" height="512" width="683">
 
         <h2>Description</h2>
-        <p>This copycat onion wrapped flying Dutchman is essentially a 
+        <p>The onion wrapped flying Dutchman is essentially a 
             cheeseburger served in an onion "bun" that is tender, crisp, 
             and sweet, and pairs perfectly well with the richness of the meat.
         </p>
