Added missing file extension for path to flying dutchman recipe
Link won't work without the proper file extension for the file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="./recipes/chocolate-peanut-butter-protein-bars.html">
                 Chocolate Peanut Butter Protein Bars
             </a></li>
-            <li><a href="./recipes/onion-wrapped-flying-dutchman">
+            <li><a href="./recipes/onion-wrapped-flying-dutchman.html">
                 Onion Wrapped Flying Dutchman
             </a></li>
         </ul>
