Filled out the recipe page
Recipe page previously lacked an image, description, ingredients, and steps.

--- a/recipes/turkey-chili.html
+++ b/recipes/turkey-chili.html
@@ -13,5 +13,35 @@
         alt="Image of turkey chili" height="512" width="683">
 
         <h2>Description</h2>
+        <p>This turkey chili recipe is very simple but hearty with plenty 
+            of flavors - it's even better on the second day! I serve this 
+            chili with low-fat Cheddar cheese and low-fat sour cream. It's 
+            also delicious with crackers.
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound of ground turkey</li>
+            <li>1 large white onion</li>
+            <li>1 tablespoon of garlic</li>
+            <li>1 can of crushed tomatoes</li>
+            <li>1 can of kidney beans</li>
+            <li>1 tablespoon of chili powder</li>
+            <li>1 tablespoon of paprika</li>
+            <li>1 tablespoon of dried oregano</li>
+            <li>1 tablespoon of cayenne pepper</li>
+            <li>1 tablespoon of cumin</li>
+            <li>1 tablespoon of salt</li>
+            <li>1 tablespoon of black pepper</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook onions in olive oil until onions are translucent.</li>
+            <li>Add ground turkey too the onions and cook until browned.</li>
+            <li>Add garlic to the turkey and onion mixture, and cook until fragrant.</li>
+            <li>Add in the crushed tomatoes, kidney beans, and spices.</li>
+            <li>Let it come to a boil, then reduce the heat, cover, and let simmer for 30 minutes.</li>
+        </ol>
     </body>
 </html>
