--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="./recipes/onion-wrapped-flying-dutchman.html">
                 Onion Wrapped Flying Dutchman
             </a></li>
+            <li><a href="./recipes/turkey-chili.html">Turkey Chili</a></li>
         </ul>
     </body>
 </html>
